--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -70,8 +70,8 @@ h1
     
 }
 #img{
-    width: 120px;
-    height: 120px;
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
     background-size: cover;
 }
@@ -97,24 +97,6 @@ input{
     border-radius: 4px;
     box-sizing: border-box;
 }
-.flex-container {
-    display: -webkit-flex;
-    display: flex;
-    width: 100%;
-    height: 500px;
-    background-color: lightgrey;
-    
-}
-
-
-.flex-item {
-    background-color: whitesmoke;
-    width: 100px;
-    height: 50px;
-    margin: 10px;
-    text-decoration: none;
-    }
-
 .side{
     text-align: left;
     width: 10%;
@@ -126,23 +108,6 @@ a:hover{
      text-decoration: none;
 }
 
-
-
-
-
-
-.links {
-  width: 200px;
-}
- 
-/*h2 {
-  font: 400 40px/1.5 Helvetica, Verdana, sans-serif;
-  margin: 0;
-  padding: 0;
-}*/
- 
-
- 
  .links li{
   font: 110% Helvetica, Verdana, sans-serif;
   border-bottom: 100% solid #ccc;
