--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -55,9 +55,14 @@ of those sections to manage the look and feel of the site. */
     background-image: url(bg2.jpg);
     background-size: cover;
 }
-h1
+.tutorials-section h1{
+font-family: 'Permanent Marker', cursive;
+    color: #0000ff;
+}
+    h1
 {
     padding: 2%
+        font-family: 'Permanent Marker', cursive;
 }
     
 
@@ -66,14 +71,28 @@ h1
     padding-top: 150px;
     text-align: left;
     background: #fff;
-    
-    
+    }
+.about-section  h1{
+font-family: 'Gloria Hallelujah', cursive;
+    color: #ff0000;
 }
-#img{
+    #img{
     width: 100%;
     height: 100%;
     border-radius: 50%;
     background-size: cover;
+}
+#img1{
+     width: 20%;
+    height: 20%;
+   margin-top: 15%;
+    
+}
+#img2{
+       width: 10%;
+    height: 10%;
+    margin-left: 60%;
+    margin-top: 15%;
 }
 .team{
     text-align: left;
@@ -84,9 +103,19 @@ h1
 }
 .contribute-section {
     height: 100%;
-    padding-top: 150px;
-    text-align: center;
-    background: #eee;
+    padding-top: 2%;
+   
+    background-size: cover;
+   background-image: url(join.jpeg);
+    
+    
+}
+.contribute-section h1 {
+  color:#ff0066;
+    font-family: 'Pacifico', cursive;
+    margin-top: 3%;
+     text-align: center;
+    
 }
 input{
        width: 50%;
@@ -106,79 +135,40 @@ input{
 }
 a:hover{
      text-decoration: none;
+    
 }
 
- .links li{
-  font: 110% Helvetica, Verdana, sans-serif;
-  border-bottom: 100% solid #ccc;
-    padding: 2%;
-    color: #94b8b8;
-}
- 
-.links li:last-child {
-  border: none;
-}
- 
-.links li a {
-        text-decoration: none;
-  color: #24478f;
-  display: block;
-  
-  -webkit-transition: font-size 0.4s ease, background-color 0.3s ease;
-  -moz-transition: font-size 0.3s ease, background-color 0.3s ease;
-  -o-transition: font-size 0.3s ease, background-color 0.3s ease;
-  -ms-transition: font-size 0.3s ease, background-color 0.3s ease;
-  transition: font-size 0.3s ease, background-color 0.3s ease;
-    
 
-}
- 
-.links li a:hover {
-  font-size: 130%;
+.list-group-item {
+     background-color:rgba(0, 102, 255,0.1);
+     border: none;
+     
+     
     
+}
+.list-group-item:hover{
+    font-size: 150%;
     color:#003366;
     text-decoration: none;
     
 }
 
-.link1 
-{
-    position: absolute;
-  width: 13.5%;
-  left:3%;
-    right:20%;
+.code{
+    width: 15%;
+    height: 15%;
+    border-radius: 50%;
+    background-size: cover;
+}
+#marketimg{
+
+    position: relative;
+    margin-left: 20%;
+}
+.c a{
+    background-color: #ff0066;
+    font-size: 150%;
     
-  
-    
-    
-    }
-.link2 {
-    position: absolute;
-    width: 13.5%;
-    left: 19%;
-    right: 10%;
 }
-.link3 {
-    position: absolute;
-    width: 13.5%;
-    left: 35%;
-    right: 550px;
-}
-.link4 {
-    position: absolute;
-    width: 13.5%;
-    left: 51%;
-    right: 550px;
-}
-.link5 {
-    position: absolute;
-    width: 13.5%;
-    left: 67%;
-    right: 550px;
-}
-.link6 {
-    position: absolute;
-    width: 13.5%;
-    left: 84%;
-    right: 550px;
+.list-group a{
+    color:#0033cc;
 }
